--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "one/BancaOnlineLaravel"]
-	path = one/BancaOnlineLaravel
+	path = dos/BancaOnlineLaravel
 	url = https://github.com/Kassi29/BancaOnlineLaravel
